@@ -8,6 +8,7 @@
 	pointer
 	(gconf_property_editor_set_prop): Use g_value_get_object for the
 	destroy notify object
+	(peditor_*_value_changed): Make sure value is non-NULL
 
 2001-11-03  Bradford Hovinen  <hovinen@ximian.com>
 
